trunk/Archive2/11/b678962f21dfff/output
main.cpp:8:71: error: empty character constant
     std::for_each(s.begin(), s.end(), [](char& c) { if (c == 'o') c = ''; });
                                                                       ^
